# KnowledgeTracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.in  requirements.txt  run.py
.github/workflows/: daily_digest.yml  weekly_deepdive.yml
config/: builders.yaml  topics.yaml
docs/superpowers/plans/: 2026-03-21-knowledge-tracker.md  2026-03-23-self-hosted-runner.md  2026-03-26-follow-builders-integration.md  2026-03-27-scoring-and-evaluator.md
knowledge_tracker/: claude_client.py  config.py  dedup.py  models.py  prompt_loader.py
knowledge_tracker/generators/: deepdive.py  digest.py  evaluator.py
knowledge_tracker/obsidian/: git_sync.py  reader.py  writer.py
knowledge_tracker/preferences/: scorer.py  store.py
knowledge_tracker/sources/: __init__.py  base.py  bluesky.py  github_trending.py  hackernews.py  reddit.py  twitter.py  web_scraper.py  web_search.py  youtube.py
prompts/: deepdive_analyse.md  deepdive_synthesise.md  digest.md
prompts/sources/: bluesky.md  feeds.md  github_trending.md  hackernews.md  reddit.md  twitter.md  web_search.md  youtube.md
tests/: test_config.py  test_dedup.py  test_evaluator.py  test_generators.py  test_integration.py  test_prompt_loader.py  test_reader.py  test_scorer.py  test_store.py  test_writer.py
tests/fixtures/: sample_digest.md  sample_preferences.md
tests/test_sources/: test_bluesky.py  test_github_trending.py  test_hackernews.py  test_reddit.py  test_twitter.py  test_web_scraper.py  test_web_search.py  test_youtube.py
(+4 files in other folders)
